push last changes

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pirachi-world",
+  "name": "smooth-component-scrolling",
   "version": "1.0.0",
   "private": true,
-  "description": "pirachi-world",
+  "description": "smooth-component-scrolling",
   "author": "Ibrahim",
   "keywords": [
     "gatsby"
